DC-108 Fix qty input for bundles on IE11

--- a/src/components/qty-increment/qty-increment.scss
+++ b/src/components/qty-increment/qty-increment.scss
@@ -53,6 +53,10 @@ $qty-increment_icon--increment-height: $qty-increment_icon--increment-width !def
         flex: 1;
         order: 2;
 
+        .ie11 & {
+            flex-basis: auto;
+        }
+
         &,
         &:hover:not([disabled]),
         &:focus:not([disabled]) {
